--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ plugins:
 gem "github-pages", group: :jekyll_plugins
 title: [Maya Venkatraman]
 description: [An intro to me and my work :)]
-logo: https://ibb.co/wK0rvw4
+logo: IMG_4834.jpg
 
 social_links:
   - name: "GitHub"
