--- a/maya-portfolio/.github/workflows/deploy.yml
+++ b/maya-portfolio/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          ESLINT_NO_DEV_ERRORS: true
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
