--- a/maya-portfolio/.github/workflows/deploy.yml
+++ b/maya-portfolio/.github/workflows/deploy.yml
@@ -26,14 +26,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: './package-lock.json'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd maya-portfolio
+          npm ci
 
       - name: Build
-        run: npm run build
+        run: |
+          cd maya-portfolio
+          npm run build
         env:
           ESLINT_NO_DEV_ERRORS: true
 
@@ -45,7 +47,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./maya-portfolio/out
 
   deploy:
     environment:
