--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,14 +28,10 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: |
-          cd maya-portfolio
-          npm ci
+        run: npm ci
 
       - name: Build
-        run: |
-          cd maya-portfolio
-          npm run build
+        run: npm run build
         env:
           ESLINT_NO_DEV_ERRORS: true
 
@@ -47,7 +43,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./maya-portfolio/out
+          path: ./out
 
   deploy:
     environment:
